--- a/index.html
+++ b/index.html
@@ -11,32 +11,36 @@
         <div class="calculatordiv">
                 <p>𝓢𝓐𝓜𝓖𝓔𝓞<br><span style="font-size:x-small;font-weight:normal;">made by samuel george <i class="far fa-copyright"></i> 2024.</span></p>
                 <div class="inputdiv">
-                    <input type="text">
+                    <div id="inputdiv"><p id="input"></p></div>
                 </div>
                 <br>
                 <div class="buttons">
-                    <div><button>7</button></div>
-                    <div><button>8</button></div>
-                    <div><button>9</button></div>
-                    <div><button>+</button></div>
+                    <div><button type="submit" id="7">7</button></div>
+                    <div><button type="submit" id="8">8</button></div>
+                    <div><button type="submit" id="9">9</button></div>
+                    <div><button type="submit" id="+">+</button></div>
                 </div>
                 <div class="buttons">
-                    <div><button>4</button></div>
-                    <div><button>5</button></div>
-                    <div><button>6</button></div>
-                    <div><button>-</button></div>
+                    <div><button type="submit" id="4">4</button></div>
+                    <div><button type="submit" id="5">5</button></div>
+                    <div><button type="submit" id="6">6</button></div>
+                    <div><button type="submit" id="-">-</button></div>
                 </div>
                 <div class="buttons">
-                    <div><button>1</button></div>
-                    <div><button>2</button></div>
-                    <div><button>3</button></div>
-                    <div><button>x</button></div>
+                    <div><button type="submit" id="1">1</button></div>
+                    <div><button type="submit" id="2">2</button></div>
+                    <div><button type="submit" id="3">3</button></div>
+                    <div><button type="submit" id="x">x</button></div>
                 </div>
                 <div class="buttons">
-                    <div><button>/</button></div>
-                    <div><button>0</button></div>
-                    <div><button>.</button></div>
-                    <div><button>=</button></div>
+                    <div><button type="submit" id="/">/</button></div>
+                    <div><button type="submit" id="0">0</button></div>
+                    <div><button type="submit" id=".">.</button></div>
+                    <div><button type="submit" id="=">=</button></div>
+                </div>
+                <div class="buttons">
+                    <div><button type="submit" id="AC">AC</button></div>
+                    <div><button type="submit" id="clear">CLEAR</button></div>
                 </div>
            </div>
         <script src="index.js"></script>
