--- a/index.html
+++ b/index.html
@@ -4,12 +4,13 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width" scale="1.0">
         <title>Calculator</title>
+        <link rel="icon" href="img/Copy_of_Add_a_heading-removebg-preview.png">
         <link rel="stylesheet" href="style.css">
         <script src="https://kit.fontawesome.com/76f5d35c55.js" crossorigin="anonymous"></script>
     </head>
     <body>
         <div class="calculatordiv">
-                <p>𝓢𝓐𝓜𝓖𝓔𝓞<br><span style="font-size:x-small;font-weight:normal;">made by samuel george <i class="far fa-copyright"></i> 2024.</span></p>
+                <p id="lightchanger"><span id="modeToggle">𝓢𝓐𝓜𝓖𝓔𝓞</span><br><span style="font-size:x-small;font-weight:normal;">made by samuel george <i class="far fa-copyright"></i> 2024.</span></p>
                 <div class="inputdiv">
                     <div id="inputdiv"><p id="input"></p></div>
                 </div>
